--- a/style.css
+++ b/style.css
@@ -147,3 +147,14 @@ h1 {
   backdrop-filter: blur(3px);
   z-index: 5;
 }
+
+.again-btn {
+  border: none;
+  background-color: #eee;
+  color: #222;
+  font-size: 1.5rem;
+  font-family: inherit;
+  padding: 1rem 1rem;
+  margin: 3rem;
+  cursor: pointer;
+}
