--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 70%;
-  background-color: white;
+  background-color: #33ff33;
   padding: 6rem;
   border-radius: 5px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
